--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="select_photo">Select Photo</string>
     <string name="photo">Photo :</string>
     <string name="add_data">Add Data</string>
+    <string name="cat_detail">Category Detail</string>
 </resources>
